# atom-date-normalizer

./: .gitignore  README  __init__.py  normalizedates.py  patternhandlers.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
atom_date_normalizer/: normalizedates.py  patternhandlers.py
tests/: test_integration.py
tests/fixtures/: atom_date_cases.csv
